style.css
/* ... */
.main-container .site-header{
    width: 100%;
    height: 12vh;
    /* background-color: var(--fs-yellow); */
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 1rem;
    /* border-bottom: 1px solid black; */
    position: fixed;
    top:0;
    left:0;
    background-color: white;
    z-index: 5;
}

.site-header .site-logo-block{
    width: 30%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* border: 1px solid black; */
    /* background-color: var(--fs-green); */
}

.site-header .site-logo-block img{
    object-fit: contain;
    width: 70%;
    height: 70%;
    background-size: 20%;
    /* border-radius: 10px; */
    background-position: center center;
    /* transform: scale(.8); */
}


.site-header .menu-right{
    width: 30%;
    height: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    /* border: 1px solid black; */
}

.site-header .cta-block{
    width: 50%;
    height: 100%;
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}


.site-header .cta-block #cta-button{
    transform: rotate(0deg);
}

#messenger-icon, #whatsapp-icon, #email-icon, #phone-icon{
    font-size: 1.5rem;
}

.site-header .cta-block i, .site-header .menu-block i{
    font-size: 2rem;
    z-index: 5;
}

.site-header .cta-block a{
    text-decoration: none;
    color: var(--bg-dark);
}

.ctas-menu{
    /* display: none; */
    position: absolute;
    top: 85%;
    right: 0;
    border: 1px solid var(--bg-dark);
    list-style-type: none;
    background-color: var(--bg-light);
    width: 400%;
    height: 0;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    border-radius: 5px;
    /* opacity: 0; */
    transition: all .3s ease-in-out;
    z-index: 10;
    opacity: 0;
}

.ctas-menu li{
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    /* border-radius: 5px; */
    width: 80%;
    border-bottom: 1px solid var(--bg-dark);
    font-weight: bolder;
    /* display: none; */
    /* background-color: red; */
}

.ctas-menu li a{
    /* background-color: yellow; */
    width: 100%;
    height: 100%;
    display:flex;
    /* padding: 1rem; */
}

.ctas-menu li a i{
    width: 30%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* border: 1px solid black; */
}

.ctas-menu li a p{
    width: 70%;
    height: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-size: 1.2rem;
}



.site-header .menu-block{
    width: 50%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    /* border: 1px solid black; */
}

.menu-block .main-menu{
    position: absolute;
    top: 85%;
    right: 0;
    border: 1px solid var(--bg-dark);
    list-style-type: none;
    background-color: var(--bg-light);
    width: 400%;
    /* height: 200%; */
    height: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    border-radius: 5px;
    /* display: none; */
    opacity: 0;
    /* transform : translateX(120%); */
    transition: all .3s ease-in-out;
    z-index: 10;
    /* background-color: red; */
}

.main-menu li{
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    /* border-radius: 5px; */
    width: 80%;
    border-bottom: 1px solid var(--bg-dark);
    font-weight: bolder;
    /* display: none; */
}

.main-menu li a{
    text-decoration: none;
    color: black;
}

.main-menu li:last-child{
    border-bottom: none;
}





/* *********************** MAIN SECTION **************************** */

.main-block{
    padding-top: 12vh;
    width: 100%;
    height: 100vh;
    background-color: #198754;
    overflow-x: hidden;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* overflow: hidden; */
}

.main-block .hero-image{
    width: 100%;
    height: 100%;
    background-size: 250% 100%;
    /* background-image:linear-gradient(to left top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2)), url("./assets/mech1.jpg"); */
    background-image:linear-gradient(to right, rgba(0, 0, 0, 0.8)), url("./assets/mech3.jpg");
    /* background-image: url("./assets/mech3.jpg"); */
    /* background-position: 57% 10%; */
    background-position: center center;
    /* object-fit: contain; */
    background-repeat: no-repeat;
    /* background-size: cover; */
    /* transform: scale(.8); */
    /* box-shadow: inset 0 5px 10px 10px white; */
}

.main-block .hero-info{
    position: absolute;
    width: 90%;
    height: 90%;
    transform: translate(-50%,-45%);
    top:50%;
    left: 50%;
    /* border: 1px solid white; */
    border-radius: 10px;
    color: white;
    display: flex;
    flex-direction: column;
    padding-top: 2rem;
    /* background-color: blue; */
}

.hero-info .hero-info-name-block{
    width: 100%;
    height: 30%;
    /* background-color: #fd7e14; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 2rem;
        /* background-color: yellow; */

}

.hero-info .hero-info-name-block h1{
    margin-bottom: 1.5rem;
}

.hero-info .hero-info-name-block h4{
    margin: .5rem;
}

.hero-info .hero-info-name-block button{
    padding: 1rem 4rem;
    background-color: none;
    border: 1px solid white;
    border-radius: 10px;
    margin-top: 2rem;
    background-color: transparent;
    color: white;
    font-weight: bolder;
    font-size: 1.2rem;
}
/* ... */

